Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-1766

ProcessSession::read can't read zero length flowfiles (DatabaseContentRepository)

Agile BoardAttach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.12.0
    • None

    Description

      RocksDbStream::write will not create a key in the db for data with length 0, but RocksDbStream::read will check for the existence of the key even when the length is 0.

      We could either

      •  fix RocksDbStream::write to create an entry in the db even for zero length values or
      •  fix RocksDbStream::read to return successfully when reading 0 bytes even if there is no corresponding key

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            MZink Martin Zink
            MZink Martin Zink
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

              Estimated:
              Original Estimate - Not Specified
              Not Specified
              Remaining:
              Remaining Estimate - 0h
              0h
              Logged:
              Time Spent - 20m
              20m

              Slack

                Issue deployment