MINIFICPP-1766 ProcessSession::read can't read zero length flowfiles (DatabaseContentRepository)

Signed-off-by: Ferenc Gerlits <fgerlits@gmail.com>

This closes #1273